# bidi-popup

./: .gitignore  LICENSE  README.md  app_settings.py  bidi-popup.desktop  bidi-popup.service  install-autostart.sh  install-service.sh  install-shortcut.sh  install.sh  layout_utils.py  listener.py  popup.py  pyproject.toml  settings_dialog.py  start.sh  theme.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
bidi_platform/: __init__.py  hotkey_x11.py  selection.py  session.py  trigger.py
