[project]
name = "bidi-popup"
version = "1.1.0"
description = "RTL/Bidi text popup for Linux — read mixed Persian/English selection with a hotkey"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "Pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
